--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,7 +20,7 @@
 <link rel="canonical" href="{{ page.url | absolute_url }}" />
 
 <link rel="manifest" href="/site.webmanifest">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
