--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,16 +17,14 @@
 <meta name="msapplication-TileColor" content="#424242">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-<link rel="canonical" href="{{ page.url | absolute_url }}" />
+<link rel="manifest" href="{{ '/site.webmanifest' | relative_url }}">
+<link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/icons/favicon-32x32.png' | relative_url }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/icons/favicon-16x16.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icons/apple-touch-icon.png' | relative_url }}">
+<link rel="mask-icon" href="{{ '/assets/icons/safari-pinned-tab.svg' | relative_url }}" color="#424242">
 
-<link rel="manifest" href="/site.webmanifest">
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-<link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#424242">
-
-{% if site.google_analytics and site.branch=="main" %}
+{% if site.google_analytics %}
 <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google_analytics}}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -44,7 +42,6 @@
         {{site.title}}
       </a>
     </h1>
-    for Python
 
     <h2 class="project-tagline">
       Send in historical price quotes and get back desired technical indicators.
@@ -54,7 +51,7 @@
 
     <a href="{{site.baseurl}}/indicators/" class="btn">Indicators</a>
     <a href="{{site.baseurl}}/guide/" class="btn">Guide</a>
-    <a href="https://www.nuget.org/packages/Skender.Stock.Indicators" class="btn">PyPI</a>
+    <a href="https://pypi.org/project/stock-indicators/" class="btn">PyPI</a>
     {% if site.github.is_project_page %}
     <a href="{{site.github.repository_url}}" class="btn not-mobile"><span class="if-large">View on </span>GitHub</a>
     {% endif %}
