--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -38,7 +38,7 @@
   <header class="page-header" role="banner">
 
     <h1 class="project-name">
-      <a href="{{site.baseurl}}/">
+      <a href="{{ '/' | absolute_url }}">
         {{site.title}}
       </a>
     </h1>
