--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icons/apple-touch-icon.png' | relative_url }}">
 <link rel="mask-icon" href="{{ '/assets/icons/safari-pinned-tab.svg' | relative_url }}" color="#424242">
 
-{% if site.google_analytics %}
+{% if site.google_analytics and site.github.source.branch == 'main' %}
 <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google_analytics}}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
