remove invalid package link

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -51,7 +51,7 @@
 
     <a href="{{site.baseurl}}/indicators/" class="btn">Indicators</a>
     <a href="{{site.baseurl}}/guide/" class="btn">Guide</a>
-    <a href="https://pypi.org/project/stock-indicators/" class="btn">PyPI</a>
+    <a href="https://pypi.org/" class="btn">PyPI</a>
     {% if site.github.is_project_page %}
     <a href="{{site.github.repository_url}}" class="btn not-mobile"><span class="if-large">View on </span>GitHub</a>
     {% endif %}
