preconnect doc site resources

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -4,6 +4,11 @@
 <head>
 <meta charset="UTF-8">
 
+<!-- pre-connections -->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://github.githubassets.com">
+<link rel="preconnect" href="https://img.shields.io">
+
 {% if site.github.source.branch != "main" or page.noindex == true %}
 <!-- exclude from search indexing -->
 <meta name="robots" content="noindex, nofollow">
