--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -1,70 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<head>
-<meta charset="UTF-8">
-
-<!-- pre-connections -->
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link rel="preconnect" href="https://github.githubassets.com">
-<link rel="preconnect" href="https://img.shields.io">
-
-{% if jekyll.environment != 'production' or page.noindex == true %}
-<!-- exclude from search indexing -->
-<meta name="robots" content="noindex, nofollow">
-{% endif %}
-
-{% seo %}
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#424242">
-<meta name="msapplication-TileColor" content="#424242">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-<link rel="manifest" href="{{ '/site.webmanifest' | relative_url }}">
-<link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/icons/favicon-32x32.png' | relative_url }}">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/icons/favicon-16x16.png' | relative_url }}">
-<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icons/apple-touch-icon.png' | relative_url }}">
-<link rel="mask-icon" href="{{ '/assets/icons/safari-pinned-tab.svg' | relative_url }}" color="#424242">
-
-{% if site.ga_tag and jekyll.environment == 'production' %}
-<script async src="https://www.googletagmanager.com/gtag/js?id={{site.ga_tag}}"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('js', new Date());
-  gtag('config', '{{site.ga_tag}}');
-</script>{% endif %}
-</head>
-
+{%- include head.html -%}
 <body>
-  <header class="page-header" role="banner">
+  {%- include header.html -%}
 
-    <div class="project-name">
-      <a href="{{ '/' | absolute_url }}">
-        stock indicators <small>for Python</small>
-      </a>
-    </div>
-
-    <div class="project-tagline">
-      Send in historical price quotes and get back desired technical indicators.
-      <br class="not-mobile" />
-      Nothing more.
-    </div>
-
-    <div class="btn-container">
-    <a href="{{site.baseurl}}/indicators/" class="btn">Indicators</a>
-    <a href="{{site.baseurl}}/guide/" class="btn">Guide</a>
-    <a href="https://pypi.org/project/stock-indicators/" class="btn">PyPI</a>
-    {% if site.github.is_project_page %}
-    <a href="{{site.github.repository_url}}" class="btn not-mobile"><span class="if-large">View on </span>GitHub</a>
-    {% endif %}
-    </div>
-  </header>
-
+  <!-- main body -->
   <main id="content" class="main-content" role="main">
-    {{ content }}
+    {{ content | replace: '<a href="http', '<a rel="noopener nofollow" target="_blank" href="http' }}
   </main>
+
+  <!-- scripts -->
+  {%- include scripts.html -%}
+
+  {%- if jekyll.environment != 'production' -%}
+  <p style="color:crimson;text-align:center;font-weight:bold;">PREVIEW</p>
+  {%- endif -%}
 </body>
 
 </html>
