Set font-size of qna-dataframe

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -284,6 +284,10 @@ a {
   span.indicator-syntax {
     font-size: 1.25rem;
   }
+
+  span.qna-dataframe {
+    font-size: 0.8rem;
+  }
   // END CUSTOM
 
   pre {
