--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -29,10 +29,10 @@
 
   <link defer rel="stylesheet"
     href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-  <link defer rel="manifest" href="{{ '/site.webmanifest' | relative_url }}">
-  <link defer rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
-  <link defer rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/icons/favicon-32x32.png' | relative_url }}">
-  <link defer rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/icons/favicon-16x16.png' | relative_url }}">
-  <link defer rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/icons/apple-touch-icon.png' | relative_url }}">
-  <link defer rel="mask-icon" href="{{ '/assets/icons/safari-pinned-tab.svg' | relative_url }}" color="#424242">
+
+  <link defer rel="manifest" href="/assets/manifest.json">
+  <link defer rel="icon" type="image/x-icon" href="/favicon.ico?v=YYYY.MM.DD">
+  <link defer rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png?v=YYYY.MM.DD">
+  <link defer rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png?v=YYYY.MM.DD">
+  <link defer rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#424242">
 </head>
