--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -31,6 +31,7 @@
     href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
   <link defer rel="manifest" href="/assets/manifest.json">
+  <link defer rel="icon" type="image/svg+xml" href="/favicon.svg?v=YYYY.MM.DD">
   <link defer rel="icon" type="image/x-icon" href="/favicon.ico?v=YYYY.MM.DD">
   <link defer rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png?v=YYYY.MM.DD">
   <link defer rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png?v=YYYY.MM.DD">
