--- a/docs/_includes/scripts.html
+++ b/docs/_includes/scripts.html
@@ -4,8 +4,13 @@
 
 {%- if jekyll.environment == 'production' -%}
 <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MNKJE3KS9Y"></script>
-<script async src="/assets/js/ga.js"></script>
+<script defer src="https://www.googletagmanager.com/gtag/js?id=G-MNKJE3KS9Y"></script>
+<script defer>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+  gtag('config', 'G-MNKJE3KS9Y', { cookie_flags: 'SameSite=Lax; Secure' });
+</script>
 
 {%- if site.clarity == 'true' -%}
 <!-- Clarity -->
